projects/examples/source/02.16.cpp
//////////////////////////////////////

// chapter : Language Core Basics

//////////////////////////////////////

// content : Unspecified Behavior
//
// content : Evaluation Order
//
// content : Operator Associativity

//////////////////////////////////////

#include <cassert>

//////////////////////////////////////

int main()
{
    auto x = 1, y = 2;

//  ----------------------------------

//	assert(x + ++x == 1 + 2); // error

//  ----------------------------------

    x = y = 1 + 2 + 3;

//  ----------------------------------

    assert(x == 6 && y == 6);
}

//////////////////////////////////////